# lnmsgr

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc  win32.rc
resources/#scripts/: Release.bat  ZipRelease.bat
resources/@cmake/: win.cmake
resources/@scripts/: ConcatenateSource.sh  LanUpdater.bat  ZipRelease.bat  ZipRelease.sh
resources/cmake/: common.cmake  win.cmake
resources/credits/: contributors.html  license_index.html  license_lanmessenger.html  license_openssl.html  license_opus.html  license_qt.html
resources/smileys/: list.txt
resources/templates/: msg_body.html  msg_header.html  msg_request.html  msg_warning.html  old_broadcast.html  old_content.html  old_request.html  old_status.html
resources/text/: thanks.txt
resources/themes/Classic/: Content.html  NextContent.html  NextStatus.html  Request.html
resources/themes/Classic/Outgoing/: Content.html  NextContent.html
sources/: aformabout.cpp  aformabout.h  aformabout.ui  aformbroadcast.cpp  aformbroadcast.h  aformbroadcast.ui  aformchat.cpp  aformchat.h  aformchat.ui  aformchatroom.cpp  aformchatroom.h  aformchatroom.ui  aformhistory.cpp  aformhistory.h  aformmain.cpp  aformmain.h  aformmain.ui  aformsettings.cpp  aformsettings.h  aformsettings.ui  aformtransfer.cpp  aformtransfer.h  aformtransfer.ui  aformuserinfo.cpp  aformuserinfo.h  aformuserinfo.ui  aformuserselect.cpp  aformuserselect.h  aformuserselect.ui  application.cpp  application.h  chatdefinitions.h  chathelper.cpp  chathelper.h  crypto.cpp  crypto.h  datagram.cpp  datagram.h  definitions.h  definitionschat.h  (+109 more)
